RESOLVED FIXED275759
[Site Isolation] Web process is unexpectedly used for navigation from about URL
https://bugs.webkit.org/show_bug.cgi?id=275759
Summary [Site Isolation] Web process is unexpectedly used for navigation from about URL
Sihui Liu
Reported 2024-06-21 16:35:06 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-21 16:51:05 PDT
Sihui Liu
Comment 2 2024-06-21 17:08:01 PDT
EWS
Comment 3 2024-06-22 21:42:35 PDT
Committed 280285@main (89490af390bc): <https://commits.webkit.org/280285@main> Reviewed commits have been landed. Closing PR #30073 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.